1. update langs 2. update modals

--- a/src/assets/scripts/json/langs/enUS/ui.json
+++ b/src/assets/scripts/json/langs/enUS/ui.json
@@ -99,7 +99,8 @@
     "inputName":            "Input Name",
     "exportBundle":         "Export Bundle",
     "showChangelog":        "Show Changelog",
-    "list":                 "List",
+    "bundleList":           "Bundle List",
+    "inventorySetting":     "Inventory",
     "requireCondition":     "Required Conditions",
     "candidateBundle":      "Candidate Bundles",
     "equipBundle":          "Equipped Bundle",
