--- a/src/assets/scripts/json/langs/jaJP/ui.json
+++ b/src/assets/scripts/json/langs/jaJP/ui.json
@@ -1,5 +1,5 @@
 {
-    "title":                null,
+    "title":                "モンスターハンター：ワールド - 計算機",
     "skillLevelZero":       null,
     "searchResult1":        null,
     "searchResult2":        null,
@@ -8,8 +8,8 @@
     "criticalRateEV":       null,
     "criticalMultipleEV":   null,
     "elementAttackEV":      null,
-    "name":                 null,
-    "description":          null,
+    "name":                 "名前",
+    "description":          "説明",
     "extraInfo":            null,
     "rawAttack":            null,
     "rawCriticalAttack":    null,
@@ -18,22 +18,22 @@
     "elementEV":            null,
     "totalEV":              null,
     "bundle":               null,
-    "level":                null,
-    "series":               null,
-    "rare":                 null,
+    "level":                "レベル",
+    "series":               "派生",
+    "rare":                 "レア",
     "general":              null,
     "health":               null,
     "stamina":              null,
     "property":             null,
     "attackProperty":       null,
     "defenseProperty":      null,
-    "attack":               null,
+    "attack":               "攻撃",
     "elderseal":            "龍封力",
-    "defense":              null,
-    "sharpness":            null,
-    "criticalRate":         null,
+    "defense":              "防御",
+    "sharpness":            "斬れ味",
+    "criticalRate":         "会心",
     "criticalMultiple":     null,
-    "element":              null,
+    "element":              "属性",
     "attackElement":        null,
     "statusElement":        null,
     "enhance":              null,
@@ -54,13 +54,13 @@
     "paralysis":            "麻痺",
     "sleep":                "睡眠",
     "blast":                "爆破",
-    "weapon":               null,
-    "helm":                 null,
-    "chest":                null,
-    "arm":                  null,
-    "waist":                null,
-    "leg":                  null,
-    "charm":                null,
+    "weapon":               "武器",
+    "helm":                 "頭",
+    "chest":                "胴",
+    "arm":                  "腕",
+    "waist":                "腰",
+    "leg":                  "脚",
+    "charm":                "護石",
     "greatSword":           "大剣",
     "longSword":            "太刀",
     "swordAndShield":       "片手剣",
@@ -77,21 +77,21 @@
     "bow":                  "弓",
     "active":               null,
     "deactive":             null,
-    "include":              null,
-    "exclude":              null,
-    "unlock":               null,
-    "lock":                 null,
-    "equip":                null,
+    "include":              "入れる",
+    "exclude":              "抜かす",
+    "unlock":               "ロック解除",
+    "lock":                 "ロック",
+    "equip":                "装備",
     "remove":               null,
     "add":                  null,
     "close":                null,
     "select":               null,
-    "save":                 null,
+    "save":                 "保存",
     "clean":                null,
     "up":                   null,
     "down":                 null,
-    "skill":                null,
-    "jewel":                null,
+    "skill":                "スキル",
+    "jewel":                "装飾品",
     "set":                  null,
     "reset":                null,
     "search":               null,
@@ -99,7 +99,8 @@
     "inputName":            null,
     "exportBundle":         null,
     "showChangelog":        null,
-    "list":                 null,
+    "bundleList":           null,
+    "inventorySetting":     null,
     "requireCondition":     null,
     "candidateBundle":      null,
     "equipBundle":          null,
