--- a/src/assets/scripts/json/langs/zhTW/ui.json
+++ b/src/assets/scripts/json/langs/zhTW/ui.json
@@ -99,7 +99,8 @@
     "inputName":            "輸入配裝名稱",
     "exportBundle":         "匯出裝備",
     "showChangelog":        "更新資訊",
-    "list":                 "列表",
+    "bundleList":           "配裝",
+    "inventorySetting":     "庫存",
     "requireCondition":     "需求條件",
     "candidateBundle":      "備選組合",
     "equipBundle":          "已選裝備",
