--- a/src/assets/scripts/json/langs/enUS/ui.json
+++ b/src/assets/scripts/json/langs/enUS/ui.json
@@ -84,6 +84,7 @@
     "equip":                "Equip",
     "remove":               "Remove",
     "add":                  "Add",
+    "change":               "Change",
     "close":                "Close",
     "select":               "Select",
     "save":                 "Save",
