--- a/src/assets/scripts/json/langs/zhTW/ui.json
+++ b/src/assets/scripts/json/langs/zhTW/ui.json
@@ -84,6 +84,7 @@
     "equip":                "裝備",
     "remove":               "移除",
     "add":                  "新增",
+    "change":               "更改",
     "close":                "關閉",
     "select":               "選取",
     "save":                 "儲存",
