--- a/src/assets/scripts/json/langs/jaJP/ui.json
+++ b/src/assets/scripts/json/langs/jaJP/ui.json
@@ -84,6 +84,7 @@
     "equip":                "装備",
     "remove":               null,
     "add":                  null,
+    "change":               null,
     "close":                null,
     "select":               null,
     "save":                 "保存",
