1. update ui layout 2. update lang files

--- a/src/assets/scripts/files/json/langs/enUS/ui.json
+++ b/src/assets/scripts/files/json/langs/enUS/ui.json
@@ -95,6 +95,7 @@
     "jewel":                "Jewel",
     "set":                  "Set",
     "reset":                "Reset",
+    "setting":              "Setting",
     "search":               "Search",
     "inputKeyword":         "Input Keyword",
     "inputName":            "Input Name",
