--- a/src/assets/scripts/files/json/langs/zhTW/ui.json
+++ b/src/assets/scripts/files/json/langs/zhTW/ui.json
@@ -95,6 +95,7 @@
     "jewel":                "裝飾珠",
     "set":                  "套裝",
     "reset":                "重置",
+    "setting":              "設定",
     "search":               "搜尋",
     "inputKeyword":         "輸入關鍵字",
     "inputName":            "輸入配裝名稱",
