1. update ui langs 2. refactor

--- a/src/assets/scripts/files/json/langs/enUS/ui.json
+++ b/src/assets/scripts/files/json/langs/enUS/ui.json
@@ -1,5 +1,5 @@
 {
-    "title":                "Monster Hunter: World - Calculator",
+    "title":                "Monster Hunter World: Iceborne - Calculator",
     "skillLevelZero":       "This skill will not include in candidate bundles",
     "every":                "Every",
     "rawAttackEV":          "Points Raw Attack EV",
