--- a/src/assets/scripts/files/json/langs/jaJP/ui.json
+++ b/src/assets/scripts/files/json/langs/jaJP/ui.json
@@ -1,5 +1,5 @@
 {
-    "title":                "モンスターハンター：ワールド - 計算機",
+    "title":                "モンスターハンターワールド：アイスボーン - 計算機",
     "skillLevelZero":       null,
     "every":                null,
     "rawAttackEV":          null,
