--- a/src/assets/scripts/files/json/langs/zhTW/ui.json
+++ b/src/assets/scripts/files/json/langs/zhTW/ui.json
@@ -1,5 +1,5 @@
 {
-    "title":                "魔物獵人世界 - 配裝計算機",
+    "title":                "魔物獵人世界: 冰原 - 配裝計算機",
     "skillLevelZero":       "此技能將不會出現在備選中",
     "every":                "每",
     "rawAttackEV":          "點基礎攻擊力期望值",
