1. remove inventorySetting modal 2. update changeLog 3. let ui support enable skill display

--- a/src/assets/scripts/files/json/langs/zhTW/ui.json
+++ b/src/assets/scripts/files/json/langs/zhTW/ui.json
@@ -103,7 +103,7 @@
     "candidateBundle":      "備選組合",
     "equipBundle":          "已選裝備",
     "status":               "狀態",
-    "inventorySetting":     "裝備列表",
+    "inventorySetting":     "選擇列表",
     "bundleList":           "配裝清單",
     "changelog":            "更新紀錄"
 }
