--- a/src/assets/scripts/files/json/langs/enUS/ui.json
+++ b/src/assets/scripts/files/json/langs/enUS/ui.json
@@ -103,7 +103,14 @@
     "candidateBundle":      "Candidate Bundles",
     "equipBundle":          "Equipped Bundle",
     "status":               "Status",
-    "inventorySetting":     "Inventory",
+    "skillList":            "Skill List",
+    "setList":              "Set List",
+    "enhanceList":          "Enhance List",
+    "jewelList":            "Jewel List",
+    "charmList":            "Chram List",
+    "armorList":            "Armor List",
+    "weaponList":           "Weapon List",
     "bundleList":           "Bundle List",
+    "algorithmSetting":     "Algorithm Setting",
     "changelog":            "Change Log"
 }
