1. finish algor setting modal proto

--- a/src/assets/scripts/files/json/langs/enUS/ui.json
+++ b/src/assets/scripts/files/json/langs/enUS/ui.json
@@ -112,5 +112,13 @@
     "weaponList":           "Weapon List",
     "bundleList":           "Bundle List",
     "algorithmSetting":     "Algorithm Setting",
-    "changelog":            "Change Log"
+    "changelog":            "Change Log",
+    "complex":              "Complex",
+    "defense":              "Defense",
+    "amount":               "Amount",
+    "slot":                 "Slot",
+    "expectedValue":        "ExpectedValue",
+    "expectedLevel":        "ExpectedLevel",
+    "complete":             "Complete",
+    "speed":                "Speed"
 }
