1. refactor fa lib

--- a/src/assets/scripts/files/json/langs/zhTW/ui.json
+++ b/src/assets/scripts/files/json/langs/zhTW/ui.json
@@ -120,5 +120,5 @@
     "expectedValue":        "期望數值",
     "expectedLevel":        "期望等級",
     "complete":             "完整",
-    "speed":                "速度"
+    "speed":                "快速"
 }
