1. update fa lib 2. add translate

--- a/src/assets/scripts/files/json/langs/enUS/ui.json
+++ b/src/assets/scripts/files/json/langs/enUS/ui.json
@@ -113,12 +113,18 @@
     "bundleList":           "Bundle List",
     "algorithmSetting":     "Algorithm Setting",
     "changelog":            "Change Log",
-    "complex":              "Complex",
-    "defense":              "Defense",
-    "amount":               "Amount",
-    "slot":                 "Slot",
-    "expectedValue":        "Expected Value",
-    "expectedLevel":        "Expected Level",
-    "complete":             "Complete",
-    "speed":                "Speed"
+    "complexSort":          "Complex Value",
+    "defenseSort":          "Defense",
+    "amountSort":           "Equip Amount",
+    "slotSort":             "Slot Amount",
+    "expectedValueSort":    "Expected Value",
+    "expectedLevelSort":    "Expected Level",
+    "completeStrategy":     "Complete",
+    "speedStrategy":        "Speed",
+    "limit":                "Result Limit",
+    "sort":                 "Sorting",
+    "strategy":             "Strategy",
+    "armorFactor":          "Armor Factor",
+    "asc":                  "ASC",
+    "desc":                 "DESC"
 }
