--- a/src/assets/scripts/files/json/langs/jaJP/ui.json
+++ b/src/assets/scripts/files/json/langs/jaJP/ui.json
@@ -113,12 +113,18 @@
     "bundleList":           null,
     "algorithmSetting":     null,
     "changelog":            "変更履歴",
-    "complex":              null,
-    "defense":              null,
-    "amount":               null,
-    "slot":                 null,
-    "expectedValue":        null,
-    "expectedLevel":        null,
-    "complete":             null,
-    "speed":                null
+    "complexSort":          null,
+    "defenseSort":          null,
+    "amountSort":           null,
+    "slotSort":             null,
+    "expectedValueSort":    null,
+    "expectedLevelSort":    null,
+    "completeStrategy":     null,
+    "speedStrategy":        null,
+    "limit":                null,
+    "sort":                 null,
+    "strategy":             null,
+    "armorFactor":          null,
+    "asc":                  null,
+    "desc":                 null
 }
