--- a/src/assets/scripts/files/json/langs/zhTW/ui.json
+++ b/src/assets/scripts/files/json/langs/zhTW/ui.json
@@ -113,12 +113,18 @@
     "bundleList":           "配裝清單",
     "algorithmSetting":     "搜尋設定",
     "changelog":            "更新紀錄",
-    "complex":              "綜合",
-    "defense":              "防禦",
-    "amount":               "數量",
-    "slot":                 "插槽",
-    "expectedValue":        "期望數值",
-    "expectedLevel":        "期望等級",
-    "complete":             "完整",
-    "speed":                "快速"
+    "complexSort":          "綜合屬性",
+    "defenseSort":          "防禦力",
+    "amountSort":           "裝備數量",
+    "slotSort":             "插槽數量",
+    "expectedValueSort":    "期望數值",
+    "expectedLevelSort":    "期望等級",
+    "completeStrategy":     "完整",
+    "speedStrategy":        "快速",
+    "limit":                "結果數量",
+    "sort":                 "排序方式",
+    "strategy":             "搜尋策略",
+    "armorFactor":          "裝備因子",
+    "asc":                  "升冪",
+    "desc":                 "降冪"
 }
