1. fa lib support sort by resistance 2. update changelog 3. release

--- a/src/assets/scripts/files/json/langs/enUS/ui.json
+++ b/src/assets/scripts/files/json/langs/enUS/ui.json
@@ -115,6 +115,11 @@
     "changelog":            "Change Log",
     "complexSort":          "Complex Value",
     "defenseSort":          "Defense",
+    "fireSort":             "Resistance: Fire",
+    "waterSort":            "Resistance: Water",
+    "thunderSort":          "Resistance: Thunder",
+    "iceSort":              "Resistance: Ice",
+    "dragonSort":           "Resistance: Dragon",
     "amountSort":           "Equip Amount",
     "slotSort":             "Slot Amount",
     "expectedValueSort":    "Expected Value",
