--- a/src/assets/scripts/files/json/langs/jaJP/ui.json
+++ b/src/assets/scripts/files/json/langs/jaJP/ui.json
@@ -115,6 +115,11 @@
     "changelog":            "変更履歴",
     "complexSort":          null,
     "defenseSort":          null,
+    "fireSort":             null,
+    "waterSort":            null,
+    "thunderSort":          null,
+    "iceSort":              null,
+    "dragonSort":           null,
     "amountSort":           null,
     "slotSort":             null,
     "expectedValueSort":    null,
