--- a/src/assets/scripts/files/json/langs/zhTW/ui.json
+++ b/src/assets/scripts/files/json/langs/zhTW/ui.json
@@ -115,6 +115,11 @@
     "changelog":            "更新紀錄",
     "complexSort":          "綜合屬性",
     "defenseSort":          "防禦力",
+    "fireSort":             "火屬性",
+    "waterSort":            "水屬性",
+    "thunderSort":          "雷屬性",
+    "iceSort":              "冰屬性",
+    "dragonSort":           "龍屬性",
     "amountSort":           "裝備數量",
     "slotSort":             "插槽數量",
     "expectedValueSort":    "期望數值",
