1. update fa lib 2. update lang

--- a/src/assets/scripts/files/json/langs/enUS/ui.json
+++ b/src/assets/scripts/files/json/langs/enUS/ui.json
@@ -126,6 +126,7 @@
     "expectedLevelSort":    "Expected Level",
     "completeStrategy":     "Complete",
     "speedStrategy":        "Speed",
+    "roughStrategy":        "Rough",
     "limit":                "Result Limit",
     "sort":                 "Sorting",
     "strategy":             "Strategy",
