--- a/src/assets/scripts/files/json/langs/zhTW/ui.json
+++ b/src/assets/scripts/files/json/langs/zhTW/ui.json
@@ -113,7 +113,7 @@
     "bundleList":           "配裝清單",
     "algorithmSetting":     "搜尋設定",
     "changelog":            "更新紀錄",
-    "complexSort":          "綜合屬性",
+    "complexSort":          "綜合數值",
     "defenseSort":          "防禦力",
     "fireSort":             "火屬性",
     "waterSort":            "水屬性",
@@ -126,6 +126,7 @@
     "expectedLevelSort":    "期望等級",
     "completeStrategy":     "完整",
     "speedStrategy":        "快速",
+    "roughStrategy":        "粗略",
     "limit":                "結果數量",
     "sort":                 "排序方式",
     "strategy":             "搜尋策略",
