1. add readme link 2. update lang 3. release

--- a/src/assets/scripts/files/json/langs/enUS/ui.json
+++ b/src/assets/scripts/files/json/langs/enUS/ui.json
@@ -113,6 +113,7 @@
     "bundleList":           "Bundle List",
     "algorithmSetting":     "Algorithm Setting",
     "changelog":            "Change Log",
+    "readme":               "Readme",
     "complexSort":          "Complex Value",
     "defenseSort":          "Defense",
     "fireSort":             "Resistance: Fire",
