--- a/src/assets/scripts/files/json/langs/jaJP/ui.json
+++ b/src/assets/scripts/files/json/langs/jaJP/ui.json
@@ -113,6 +113,7 @@
     "bundleList":           null,
     "algorithmSetting":     null,
     "changelog":            "変更履歴",
+    "readme":               null,
     "complexSort":          null,
     "defenseSort":          null,
     "fireSort":             null,
