--- a/src/assets/scripts/files/json/langs/zhTW/ui.json
+++ b/src/assets/scripts/files/json/langs/zhTW/ui.json
@@ -113,6 +113,7 @@
     "bundleList":           "配裝清單",
     "algorithmSetting":     "搜尋設定",
     "changelog":            "更新紀錄",
+    "readme":               "使用說明",
     "complexSort":          "綜合數值",
     "defenseSort":          "防禦力",
     "fireSort":             "火屬性",
