--- a/src/assets/scripts/files/json/langs/zhTW/ui.json
+++ b/src/assets/scripts/files/json/langs/zhTW/ui.json
@@ -124,13 +124,15 @@
     "slotSort":             "插槽數量",
     "expectedValueSort":    "期望數值",
     "expectedLevelSort":    "期望等級",
-    "completeStrategy":     "完整",
-    "speedStrategy":        "快速",
-    "roughStrategy":        "粗略",
     "limit":                "結果數量",
     "sort":                 "排序方式",
     "strategy":             "搜尋策略",
-    "armorFactor":          "裝備因子",
+    "isEndEarly":           "提早終止",
+    "isExpectBundle":       "裝備期望",
+    "isDeepSearch":         "深度搜尋",
+    "isRequireConsistent":  "需求一致",
+    "armorFactor":          "裝甲因子",
+    "jewelFactor":          "裝飾珠因子",
     "asc":                  "升冪",
     "desc":                 "降冪"
 }
