1. update algorithmSetting modal

--- a/src/assets/scripts/files/json/langs/enUS/ui.json
+++ b/src/assets/scripts/files/json/langs/enUS/ui.json
@@ -130,6 +130,7 @@
     "isEndEarly":           "Is End Early",
     "isRequireConsistent":  "Is Require Consistent",
     "armorFactor":          "Armor Factor",
+    "charmFactor":          "Charm Factor",
     "jewelFactor":          "Jewel Factor",
     "asc":                  "ASC",
     "desc":                 "DESC"
