--- a/src/assets/scripts/files/json/langs/zhTW/ui.json
+++ b/src/assets/scripts/files/json/langs/zhTW/ui.json
@@ -133,7 +133,7 @@
     "charmFactor":          "護石因子",
     "jewelFactor":          "裝飾珠因子",
     "all":                  "全部",
-    "unlimited":            "無限制",
+    "unlimited":            "無限",
     "asc":                  "升冪",
     "desc":                 "降冪"
 }
