1. update setting modal 2. update equip item selector 3. update candidate bundles

--- a/src/assets/scripts/files/json/langs/enUS/ui.json
+++ b/src/assets/scripts/files/json/langs/enUS/ui.json
@@ -139,5 +139,7 @@
     "desc":                 "DESC",
     "searching":            "Searching",
     "bundleCount":          "Bundle Count",
-    "searchPercent":        "Percentage"
+    "searchPercent":        "Percentage",
+    "basic":                "Basic",
+    "advanced":             "Advanced"
 }
