--- a/src/assets/scripts/files/json/langs/jaJP/ui.json
+++ b/src/assets/scripts/files/json/langs/jaJP/ui.json
@@ -139,5 +139,7 @@
     "desc":                 null,
     "searching":            null,
     "bundleCount":          null,
-    "searchPercent":        null
+    "searchPercent":        null,
+    "basic":                null,
+    "advanced":             null
 }
