1. update algor setting

--- a/src/assets/scripts/files/json/langs/jaJP/ui.json
+++ b/src/assets/scripts/files/json/langs/jaJP/ui.json
@@ -129,6 +129,7 @@
     "sort":                 null,
     "strategy":             null,
     "isEndEarly":           null,
+    "isExpectBundle":       null,
     "isRequireConsistent":  null,
     "armorFactor":          null,
     "charmFactor":          null,
