--- a/src/assets/scripts/files/json/langs/enUS/ui.json
+++ b/src/assets/scripts/files/json/langs/enUS/ui.json
@@ -129,6 +129,7 @@
     "sort":                 "Sorting",
     "strategy":             "Strategy",
     "isEndEarly":           "Is End Early",
+    "isExpectBundle":       "Is Expect Bundle",
     "isRequireConsistent":  "Is Require Consistent",
     "armorFactor":          "Armor Factor",
     "charmFactor":          "Charm Factor",
