--- a/src/assets/scripts/files/json/langs/enUS/ui.json
+++ b/src/assets/scripts/files/json/langs/enUS/ui.json
@@ -141,5 +141,6 @@
     "bundleCount":          "Bundle Count",
     "searchPercent":        "Percentage",
     "basic":                "Basic",
-    "advanced":             "Advanced"
+    "advanced":             "Advanced",
+    "tab":                  "Tab"
 }
