--- a/src/assets/scripts/files/json/langs/jaJP/ui.json
+++ b/src/assets/scripts/files/json/langs/jaJP/ui.json
@@ -141,5 +141,6 @@
     "bundleCount":          null,
     "searchPercent":        null,
     "basic":                null,
-    "advanced":             null
+    "advanced":             null,
+    "tab":                  null
 }
