1. add custom weapon component

--- a/src/assets/scripts/files/json/langs/enUS/ui.json
+++ b/src/assets/scripts/files/json/langs/enUS/ui.json
@@ -147,5 +147,6 @@
     "hour":                 "h",
     "minute":               "m",
     "second":               "s",
-    "tab":                  "Tab"
+    "tab":                  "Tab",
+    "customWeapon":         "Custom Weapon"
 }
