--- a/src/assets/scripts/files/json/langs/jaJP/ui.json
+++ b/src/assets/scripts/files/json/langs/jaJP/ui.json
@@ -147,5 +147,6 @@
     "hour":                 "時",
     "minute":               "分",
     "second":               "秒",
-    "tab":                  null
+    "tab":                  null,
+    "customWeapon":         null
 }
