--- a/src/assets/scripts/files/json/langs/enUS/ui.json
+++ b/src/assets/scripts/files/json/langs/enUS/ui.json
@@ -126,7 +126,8 @@
     "expectedValueSort":    "Expected Value",
     "expectedLevelSort":    "Expected Level",
     "resultLimit":          "Result Limit",
-    "sort":                 "Sorting",
+    "sortBy":               "Sort By",
+    "sortOrder":            "Sort Order",
     "strategy":             "Strategy",
     "isEndEarly":           "Is End Early",
     "isExpectBundle":       "Is Expect Bundle",
