--- a/src/assets/scripts/files/json/langs/jaJP/ui.json
+++ b/src/assets/scripts/files/json/langs/jaJP/ui.json
@@ -126,7 +126,8 @@
     "expectedValueSort":    null,
     "expectedLevelSort":    null,
     "resultLimit":          null,
-    "sort":                 null,
+    "sortBy":               null,
+    "sortOrder":            null,
     "strategy":             null,
     "isEndEarly":           null,
     "isExpectBundle":       null,
