--- a/src/assets/scripts/files/json/langs/zhTW/ui.json
+++ b/src/assets/scripts/files/json/langs/zhTW/ui.json
@@ -126,7 +126,8 @@
     "expectedValueSort":    "期望數值",
     "expectedLevelSort":    "期望等級",
     "resultLimit":          "結果數量",
-    "sort":                 "排序方式",
+    "sortBy":               "排序依據",
+    "sortOrder":            "排序順序",
     "strategy":             "搜尋策略",
     "isEndEarly":           "提早終止",
     "isExpectBundle":       "期望預測",
